flux/infrastructure/configs/gateways/app/private/httproute-redirect.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: private-https-redirect
spec:
  parentRefs:
    - name: private-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
